Fix gap for errors in default theme

--- a/src/less/LiveValidatorTheme.less
+++ b/src/less/LiveValidatorTheme.less
@@ -41,7 +41,7 @@
     li:after {
         content: '-';
         margin-left: 0.4em;
-        margin-right: -.5px;
+        margin-right: -1px;
         font-weight: 600;
     }
 }
